[package]
name = "pending_eth_transactions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
all_asserts = "2.3.0"
anyhow = "1.0"
env_logger = "0.9.0"
flume = "0.10.9"
futures = "0.3.18"
futures-util = "0.3.18"
parking_lot = "0.11"
log = "0.4.14"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features=["native-tls"]}
serde = "1.0.130"
serde_json = "1.0.68"
web3 = { version = "0.17.0", default-features = true, features = ["ws-tls-tokio","ws-tokio"] }
